--- a/projects/calculator-project/style.css
+++ b/projects/calculator-project/style.css
@@ -1,3 +1,9 @@
+html {
+  font-size: 30px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+}
+
 body {
   background-color: #494949;
   display: flex;
@@ -14,6 +20,11 @@ body {
   border-radius: 3px;
   gap: 20px;
 }
+button {
+  font-size: inherit;
+  font-family: inherit;
+  font-weight: inherit;
+}
 
 #screen {
   background-color: #979797;
@@ -23,16 +34,30 @@ body {
 
 #number-pad {
   background-color: #323232;
+  display: flex;
+  justify-content: space-between;
 }
 
 #numbers {
   display: grid;
   grid-template-columns: auto auto auto;
   gap: 2px;
-  padding: 2px 150px 2px 2px;
+  padding: 2px 2px 2px 2px;
+  flex-basis: 70%;
+}
+
+#symbols {
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+  flex-basis: 30%;
+  padding: 2px 2px 2px 0;
 }
 
 .number {
-  font-size: 30px;
+  height: 100px;
+}
+
+.symbol {
   height: 100px;
 }
