--- a/projects/calculator-project/style.css
+++ b/projects/calculator-project/style.css
@@ -1,5 +1,5 @@
 html {
-  font-size: 30px;
+  font-size: 2em;
   font-family: "Roboto", sans-serif;
   font-weight: 300;
 }
@@ -18,7 +18,6 @@ button {
 
 #container {
   width: 400px;
-  height: 600px;
   background-color: #606060;
   padding: 20px 20px;
   display: flex;
@@ -31,8 +30,7 @@ button {
   display: flex;
   flex-direction: column;
   background-color: #979797;
-  height: 20%;
-  max-height: 20%;
+  height: 4em;
   border-radius: 2px;
   justify-content: end;
   align-items: end;
@@ -47,43 +45,46 @@ button {
 #buttons {
   display: flex;
   flex-direction: column;
-  gap: 20px;
 }
 
 #control-btn {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  height: 75px;
 }
 
 #control-btn button {
-  width: 40%;
+  width: 50%;
+  margin: 2px;
 }
 
 #number-pad {
-  background-color: #323232;
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-template-rows: 1fr;
+}
+
+#numbers,
+#symbols {
+}
+
+.number,
+.symbol {
+  height: 100px;
+  margin: 2px;
 }
 
 #numbers {
   display: grid;
   grid-template-columns: auto auto auto;
-  gap: 2px;
-  padding: 2px 2px 2px 2px;
-  flex-basis: 70%;
 }
 .number {
-  height: 100px;
 }
 
 #symbols {
   display: flex;
   flex-direction: column;
-  gap: 2px;
-  flex-basis: 30%;
-  padding: 2px 2px 2px 0;
 }
 
 .symbol {
-  height: 100px;
 }
