Refactor calculator UI and enhance functionality
Removed unnecessary screen container in calculator HTML and modified the corresponding css styling. Improved JavaScript logic to support decimal point inputs, calculate functions with improved precision, along with clear and equals operations improvements. This commit improves calculator's user interface and experience significantly.

--- a/projects/calculator-project/style.css
+++ b/projects/calculator-project/style.css
@@ -36,17 +36,16 @@ button {
   align-items: end;
   padding: 0 20px;
 }
-#screenTextContainer {
-  display: flex;
-  align-items: center;
-}
 
 #screenText {
   margin: 0;
   font-size: 50px;
 }
-#screenTextSymbol {
+
+#screenTextFull {
   margin: 0;
+  font-size: 30px;
+  color: #404040;
 }
 
 #buttons {
