--- a/full-stack-js/projects/sign-up-form/style.css
+++ b/full-stack-js/projects/sign-up-form/style.css
@@ -4,4 +4,25 @@
 }
 
 body {
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  display: flex;
+}
+
+.image-container {
+  height: 100vh;
+  width: 40%;
+  background-image: url("assets/background.jpg");
+  background-size: cover;
+  background-position-x: center;
+  background-repeat: no-repeat;
+}
+
+.signup-container {
+  height: 100vh;
+  width: 60%;
+  background-color: #a3a3a3;
 }
