--- a/full-stack-js/html-css/projects/sign-up-form/style.css
+++ b/full-stack-js/html-css/projects/sign-up-form/style.css
@@ -15,10 +15,33 @@ body {
 .image-container {
   height: 100vh;
   width: 40%;
+  max-width: 40%;
   background-image: url("assets/background.jpg");
   background-size: cover;
-  background-position-x: center;
+  background-position: center;
   background-repeat: no-repeat;
+}
+
+.logo-container {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  top: 20vh;
+  flex-direction: row;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 20px 0;
+}
+
+.logo-img {
+  height: 100px;
+  margin: auto 0;
+}
+.logo-text {
+  font-family: "Norse", sans-serif;
+  color: white;
+  font-size: 5em;
+  margin: auto 0;
 }
 
 .signup-container {
