--- a/full-stack-js/javascript/projects/library-app/style.css
+++ b/full-stack-js/javascript/projects/library-app/style.css
@@ -2,3 +2,39 @@ body {
   padding: 0;
   margin: 0;
 }
+
+header {
+  display: flex;
+  justify-content: space-between;
+  height: 50px;
+}
+
+p {
+  margin: 0;
+  padding: 0;
+}
+
+#title {
+  font-size: 2em;
+}
+
+#modal {
+  transform: translateX(-50%);
+  position: fixed;
+  left: 50%;
+  width: 300px;
+  z-index: 1;
+  display: none;
+}
+
+form {
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+input {
+  margin: 0;
+}
