--- a/full-stack-js/javascript/projects/library-app/style.css
+++ b/full-stack-js/javascript/projects/library-app/style.css
@@ -9,6 +9,9 @@ header {
   height: 50px;
 }
 
+#container {
+}
+
 p {
   margin: 0;
   padding: 0;
@@ -19,19 +22,21 @@ p {
 }
 
 #modal {
-  transform: translateX(-50%);
+  backdrop-filter: brightness(80%) blur(1px);
   position: absolute;
-  left: 50%;
-  top: 150px;
-
-  width: 300px;
+  align-content: center;
+  top: 0;
+  height: 100vh;
+  width: 100vw;
   z-index: 1;
-  display: block;
+  display: none;
 }
 
 form {
+  width: 200px;
   padding: 0;
   display: flex;
+  margin: auto;
   flex-direction: column;
   align-items: center;
   gap: 10px;
@@ -50,4 +55,7 @@ input {
 
 .book-card {
   border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
