--- a/full-stack-js/javascript/projects/library-app/style.css
+++ b/full-stack-js/javascript/projects/library-app/style.css
@@ -1,6 +1,14 @@
+html {
+  font-family: "Roboto", "sans-serif";
+}
+
 body {
   padding: 0;
   margin: 0;
+}
+
+button {
+  font-family: inherit;
 }
 
 header {
@@ -33,8 +41,11 @@ p {
 }
 
 form {
-  width: 200px;
-  padding: 0;
+  background-color: white;
+  border-radius: 5px;
+  border: 1px solid #afafaf;
+  width: fit-content;
+  padding: 20px;
   display: flex;
   margin: auto;
   flex-direction: column;
@@ -44,9 +55,11 @@ form {
 
 input {
   margin: 0;
+  font-size: 20px;
 }
 
 #book-container {
+  padding: 20px 200px;
   display: grid;
   grid-gap: 10px;
   grid-template-columns: repeat(auto-fill, 200px);
@@ -54,8 +67,24 @@ input {
 }
 
 .book-card {
-  border: 1px solid black;
+  border-radius: 4px;
+  gap: 5px;
+  padding: 5px;
+  border: 1px solid #c8c8c8;
+  max-width: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-around;
+}
+
+.card-btn {
+  display: flex;
+  gap: 3px;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card-title {
+  font-size: 20px;
 }
