--- a/full-stack-js/javascript/projects/tic-tac-toe/style.css
+++ b/full-stack-js/javascript/projects/tic-tac-toe/style.css
@@ -20,9 +20,7 @@ body {
   width: 180px;
   height: 180px;
   background-color: #8e8e8e;
-}
-
-.cell {
+  font-size: 8em;
 }
 
 #game-board > div > div:not(:first-child) {
