--- a/full-stack-js/javascript/projects/tic-tac-toe/style.css
+++ b/full-stack-js/javascript/projects/tic-tac-toe/style.css
@@ -3,8 +3,13 @@ body {
   display: flex;
   justify-content: center;
   padding-top: 50px;
+  font-family: "Roboto", "sans-serif";
 }
 
+p {
+  margin: 0;
+  padding: 0;
+}
 #container {
   width: 540px;
   height: 540px;
@@ -25,6 +30,16 @@ body {
   height: 180px;
   background-color: #8e8e8e;
   font-size: 8em;
+  font-weight: 200;
+  text-align: center;
+}
+
+#texts {
+  display: flex;
+  justify-content: space-between;
+  height: 50px;
+  padding: 0 20px;
+  font-size: 20px;
 }
 
 #game-board > div:not(:first-child) > div {
