Add rematch feature and improve UI/UX
- Introduced a "Rematch" button to reset the game
- Enhanced game board styling with new CSS properties
- Added animations for player moves
- Refactored game initialization logic for better code reusability
- Updated gameplay logic to handle the new rematch feature

--- a/full-stack-js/javascript/projects/tic-tac-toe/style.css
+++ b/full-stack-js/javascript/projects/tic-tac-toe/style.css
@@ -10,7 +10,19 @@ p {
   margin: auto 0;
   padding: 0;
 }
+
 #container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+#texts {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 20px;
+  font-size: 28px;
+  color: #c8c8c8;
 }
 
 #game-board {
@@ -18,6 +30,15 @@ p {
   flex-direction: column;
   border-radius: 10px;
   overflow: hidden;
+  user-select: none;
+}
+
+#game-board > div:not(:first-child) > div {
+  border-top: #505050 solid 2px;
+}
+
+#game-board > div > div:not(:first-child) {
+  border-left: #505050 solid 2px;
 }
 
 .row {
@@ -33,17 +54,25 @@ p {
   text-align: center;
 }
 
-#texts {
-  display: flex;
-  justify-content: space-between;
-  height: 50px;
-  padding: 0 20px;
-  font-size: 20px;
+.sign-text {
+  opacity: 1;
+  animation-name: text-fade-in;
+  animation-duration: 0.3s;
 }
 
-#game-board > div:not(:first-child) > div {
-  border-top: #505050 solid 2px;
+@keyframes text-fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
-#game-board > div > div:not(:first-child) {
-  border-left: #505050 solid 2px;
+
+#rematch {
+  display: none;
+  font-size: 30px;
+  font-family: inherit;
+  width: 200px;
+  align-self: center;
 }
