--- a/full-stack-js/javascript/projects/restaurant-project/src/styles.css
+++ b/full-stack-js/javascript/projects/restaurant-project/src/styles.css
@@ -1,3 +1,39 @@
+html {
+  font-family: "Roboto", sans-serif;
+}
+
 body {
   background-color: #222222;
+  padding: 0;
+  margin: 0;
+}
+
+nav {
+  display: flex;
+  gap: 30px;
+  justify-content: center;
+  padding: 50px 0;
+}
+
+button {
+  font-family: inherit;
+  color: #9f9f9f;
+  font-size: 1.8em;
+  font-weight: 300;
+  height: 40px;
+  width: 120px;
+  border: none;
+  border-bottom: 2px #656565 solid;
+  transition: 0.2s ease;
+  background-color: inherit;
+}
+
+button:hover {
+  color: #cfcfcf;
+  border-color: #0d47a1;
+}
+
+#content {
+  background-color: #211111;
+  margin: 0 200px;
 }
