--- a/full-stack-js/javascript/projects/restaurant-project/src/styles.css
+++ b/full-stack-js/javascript/projects/restaurant-project/src/styles.css
@@ -1,3 +1,9 @@
+:root {
+  --tab-color: #9f9f9f;
+  --tab-color-active: #cfcfcf;
+  --tab-border-color: #656565;
+  --tab-border-color-active: #0d47a1;
+}
 html {
   font-family: "Roboto", sans-serif;
 }
@@ -23,14 +29,19 @@ button {
   height: 40px;
   width: 120px;
   border: none;
-  border-bottom: 2px #656565 solid;
+  border-bottom: 2px var(--tab-border-color) solid;
   transition: 0.2s ease;
   background-color: inherit;
 }
 
+button.active {
+  color: var(--tab-color-active);
+  border-color: var(--tab-border-color-active);
+}
+
 button:hover {
-  color: #cfcfcf;
-  border-color: #0d47a1;
+  color: var(--tab-color-active);
+  border-color: var(--tab-border-color-active);
 }
 
 #content {
