--- a/full-stack-js/javascript/projects/restaurant-project/src/styles.css
+++ b/full-stack-js/javascript/projects/restaurant-project/src/styles.css
@@ -18,7 +18,7 @@ nav {
   display: flex;
   gap: 30px;
   justify-content: center;
-  padding: 50px 0;
+  padding: 30px 0;
 }
 
 button {
@@ -45,6 +45,24 @@ button:hover {
 }
 
 #content {
-  background-color: #211111;
-  margin: 0 200px;
+  color: #8c8c8c;
+  margin: 0 auto;
+  max-width: 600px;
+  font-weight: 300;
+}
+
+p {
+  margin: 0;
+}
+
+.home-title {
+  text-align: center;
+  font-size: 2em;
+  margin-bottom: 20px;
+}
+
+.text {
+  font-size: 1.2em;
+  max-width: 400px;
+  margin: 0 auto 20px;
 }
