--- a/full-stack-js/javascript/projects/todo-project/src/styles.css
+++ b/full-stack-js/javascript/projects/todo-project/src/styles.css
@@ -31,6 +31,7 @@ p {
 .card-title-container {
   border-bottom: #222222 solid 1px;
   display: flex;
+  justify-content: space-between;
 }
 
 .card-title {
@@ -38,7 +39,4 @@ p {
 }
 .arrow-icon {
   height: 50px;
-  color: red;
-  fill: red;
-  stroke: red;
 }
