--- a/full-stack-js/javascript/projects/todo-project/src/styles.css
+++ b/full-stack-js/javascript/projects/todo-project/src/styles.css
@@ -28,14 +28,23 @@ p {
 .card-component:not(:first-child) {
   border-bottom: #222222 solid 1px;
 }
-.card-title-container {
+
+.card-item-container {
+  min-height: 30px;
   border-bottom: #222222 solid 1px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  padding: 2px 10px;
 }
 
 .card-title {
+  font-weight: 300;
   font-size: 2em;
+}
+
+.card-edit-icon {
+  height: 30px;
 }
 
 .checkpoint-container {
