Add new card component and update styles
- Implemented `newCard` component for adding cards to the UI
- Added styles for `#container` and `#add-card-icon` in `styles.css`
- Included `add-svgrepo-com (1).svg` asset
- Integrated `newCard` component in `index.js`

--- a/full-stack-js/javascript/projects/todo-project/src/styles.css
+++ b/full-stack-js/javascript/projects/todo-project/src/styles.css
@@ -12,6 +12,11 @@ p {
   margin: 0;
 }
 
+#container {
+  display: flex;
+  flex-direction: row;
+}
+
 .card-container {
   background-color: #4c577c;
   border-radius: 3px;
@@ -45,6 +50,10 @@ p {
 
 .card-edit-icon {
   height: 30px;
+}
+
+#add-card-icon {
+  height: 200px;
 }
 
 .checkpoint-container {
