--- a/full-stack-js/javascript/projects/todo-project/src/styles.css
+++ b/full-stack-js/javascript/projects/todo-project/src/styles.css
@@ -8,13 +8,13 @@ body {
 }
 
 p {
-  padding: 0;
+  padding: 2px;
   margin: 0;
 }
 
 #container {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 250px);
 }
 
 .card-container {
@@ -23,6 +23,7 @@ p {
   color: #dadada;
   border: #5c5c5c 1px solid;
   width: 200px;
+  height: 300px;
   margin: 20px;
   padding: 10px;
   display: flex;
@@ -53,8 +54,15 @@ p {
 }
 
 #add-card-icon {
-  padding-top: 50px;
   height: 150px;
+  margin: auto;
+}
+
+#card-add-container {
+  display: flex;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
 }
 
 .checkpoint-container {
@@ -64,4 +72,8 @@ p {
 
 .arrow-icon {
   height: 50px;
+}
+
+[contenteditable] {
+  outline: 0;
 }
