--- a/full-stack-js/javascript/exercises/async-and-apis/weather-exercise/src/styles.css
+++ b/full-stack-js/javascript/exercises/async-and-apis/weather-exercise/src/styles.css
@@ -1,3 +1,9 @@
-html {
-  background-color: #202020;
+body {
+  background-color: #131313;
+}
+
+p {
+  margin: 0;
+  color: #c8c8c8;
+  font-size: 3em;
 }
