--- a/full-stack-js/javascript/projects/weather-app/src/styles.css
+++ b/full-stack-js/javascript/projects/weather-app/src/styles.css
@@ -1,5 +1,35 @@
+html {
+  font-family: "Roboto", sans-serif;
+}
+
 body {
   padding: 0;
   margin: 0;
   background-color: #202020;
+
+  color: #9f9f9f;
+}
+
+#container {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  flex-direction: column;
+  padding: 20px 0;
+}
+
+#search-container {
+}
+
+table {
+  margin: auto;
+}
+
+#weather-data {
+  width: 70%;
+}
+
+#location-name {
+  font-size: 2em;
+  font-weight: 300;
 }
