Enhance row styling and update date handling
- Added margin, font styling, and flex properties to `.row` in styles.css
- Implemented `splitDate` function to format date in rows.js
- Improved row HTML structure in rows.js to include max and min temperatures

--- a/full-stack-js/javascript/projects/weather-app/src/styles.css
+++ b/full-stack-js/javascript/projects/weather-app/src/styles.css
@@ -35,5 +35,10 @@ table {
 }
 
 .row {
+  margin: 20px 0;
   background-color: #353535;
+  font-size: 1.4em;
+  font-weight: 300;
+  display: flex;
+  justify-content: space-between;
 }
