--- a/full-stack-js/advanced-html-css/exercises/animation/03-dropdown-menu/style.css
+++ b/full-stack-js/advanced-html-css/exercises/animation/03-dropdown-menu/style.css
@@ -17,7 +17,6 @@
   padding: 0;
   margin: 0;
   background-color: rgb(99, 97, 97);
-
   display: none;
 }
 
@@ -26,7 +25,22 @@ ul.dropdown-menu li:hover {
 }
 
 .visible {
+  transform-origin: top;
+  animation:expand 500ms ;
   display: block;
 }
 
+@keyframes expand {
+  0% {
+    transform: scaleY(0);
+  }
+  50% {
+    transform: scaleY(1.2);
+
+  }
+  100% {
+    transform: scaleY(1);
+  }
+
+}
 
