--- a/full-stack-js/node-js/exercises/express-exercises/views-exercises/views/index.ejs
+++ b/full-stack-js/node-js/exercises/express-exercises/views-exercises/views/index.ejs
@@ -1,6 +1,13 @@
 <html>
-    <body>
-        <%= message %>
-        <%= foo %>
-    </body>
+<head>
+    <title>Homepage</title>
+</head>
+<body>
+<%- include('navbar', {links: links}) %>
+<ul>
+    <% users.forEach((user) => { %>
+        <%- include("user", {user:user}); %>
+    <% }) %>
+</ul>
+</body>
 </html>
