--- a/full-stack-js/node-js/projects/mini-message-board/views/form.ejs
+++ b/full-stack-js/node-js/projects/mini-message-board/views/form.ejs
@@ -1,6 +1,6 @@
 <div>
     <h1>New message</h1>
-    <form>
+    <form method="post" action="/new">
         <label for="aname"></label><br>
         <input
                 type="text"
@@ -13,5 +13,6 @@
                 id="message"
                 name="message"
         >
+        <input type="submit" value="submit">
     </form>
 </div>
