Enable message posting and update form field names
Added URL encoding middleware to handle form submissions and set up a POST route for receiving new messages. Updated form field names for better clarity and consistency.

--- a/full-stack-js/node-js/projects/mini-message-board/views/form.ejs
+++ b/full-stack-js/node-js/projects/mini-message-board/views/form.ejs
@@ -1,17 +1,17 @@
 <div>
     <h1>New message</h1>
-    <form method="post" action="/new">
-        <label for="aname"></label><br>
+    <form method="POST" action="/new">
+        <label for="authorName"></label><br>
         <input
                 type="text"
-                id="aname"
-                name="aname"
+                id="authorName"
+                name="authorName"
         >
-        <label for="message"></label><br>
+        <label for="messageText"></label><br>
         <input
                 type="text"
-                id="message"
-                name="message"
+                id="messageText"
+                name="messageText"
         >
         <input type="submit" value="submit">
     </form>
