Add navigation bar and message saving functionality
This update introduces a navigation bar component and integrates it into the main layout of the message board. Additionally, it modifies the message submission process to save new messages and redirect users to the homepage.

--- a/full-stack-js/node-js/projects/mini-message-board/views/index.ejs
+++ b/full-stack-js/node-js/projects/mini-message-board/views/index.ejs
@@ -3,6 +3,7 @@
     <title>Homepage</title>
 </head>
 <body>
+<%- include('navbar', {links: links}) %>
 <ul>
     <% messages.forEach((message) => { %>
         <p><%= message.text %></p>
