Enhance message display and add GET route placeholder
Updated the message display in the index.ejs to show the message text as a header, added the author and date, and included a "Show message" button for each message. Also added a placeholder GET route in indexRouter.js, and included a new line in navbar.ejs for better readability.

--- a/full-stack-js/node-js/projects/mini-message-board/views/index.ejs
+++ b/full-stack-js/node-js/projects/mini-message-board/views/index.ejs
@@ -6,7 +6,10 @@
 <%- include('navbar', {links: links}) %>
 <ul>
     <% messages.forEach((message) => { %>
-        <p><%= message.text %></p>
+        <h1><%= message.text %></h1>
+        <p>Author: <%= message.user %></p>
+        <p><%= message.added %></p>
+        <button>Show message</button>
     <% }) %>
 </ul>
 </body>
