Refactor message board UI and routing
Added an `onclick` event to message buttons to redirect users to the message page. Introduced a `handleClick` function with a console log for potential future use in the indexRouter and passed it to the view for consistency.

--- a/full-stack-js/node-js/projects/mini-message-board/views/index.ejs
+++ b/full-stack-js/node-js/projects/mini-message-board/views/index.ejs
@@ -9,7 +9,7 @@
         <h1><%= message.text %></h1>
         <p>Author: <%= message.user %></p>
         <p><%= message.added %></p>
-        <button>Show message</button>
+        <button onclick="location.href='/message';">Open</button>
     <% }) %>
 </ul>
 </body>
