--- a/full-stack-js/node-js/projects/mini-message-board/views/index.ejs
+++ b/full-stack-js/node-js/projects/mini-message-board/views/index.ejs
@@ -9,7 +9,7 @@
         <h1><%= message.text %></h1>
         <p>Author: <%= message.user %></p>
         <p><%= message.added %></p>
-        <button onclick="location.href='/<%=index%>';">Open</button>
+        <button onclick="location.href='/message/<%=index%>';">Open</button>
     <% }) %>
 </ul>
 </body>
