Add user update and delete functionality
Implemented user update routes and views to handle fetching and posting updated user data. Added email, age, and bio fields to user storage and user creation form. Integrated user delete functionality with confirmation prompt on the main user list page.

--- a/full-stack-js/node-js/exercises/express-exercises/forms-and-data-handling/views/createUser.ejs
+++ b/full-stack-js/node-js/exercises/express-exercises/forms-and-data-handling/views/createUser.ejs
@@ -12,21 +12,58 @@
         method="POST"
 >
     <label for="firstName">First Name: </label>
+    <br>
+
     <input
             type="text"
             name="firstName"
             id="firstName"
             required
     >
+    <br>
+
     <label for="lastName">Last Name: </label>
+    <br>
     <input
             type="text"
             name="lastName"
             id="lastName"
             required
     >
+    <br>
+    <br>
+    <label for="email">Email: </label>
+    <br>
+    <input
+            type="text"
+            name="email"
+            id="email"
+            required
+    >
+    <br>
+    <label for="age">Age: </label>
+    <br>
+    <input
+            type="text"
+            name="age"
+            id="age"
+            required
+    >
+    <br>
+    <br>
+    <label for="bio">Bio: </label>
+    <br>
+    <input
+            type="text"
+            name="bio"
+            id="bio"
+            required
+    >
+    <br>
+    <br>
     <button type="submit">Submit</button>
 </form>
+<br>
 <a href="/">Back to home</a>
 </body>
 </html>
