--- a/full-stack-js/node-js/exercises/express-exercises/forms-and-data-handling/views/index.ejs
+++ b/full-stack-js/node-js/exercises/express-exercises/forms-and-data-handling/views/index.ejs
@@ -2,19 +2,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title><%= title %></title>
+    <title><%= title %></title>
 </head>
 <body>
 <h1><%= title %></h1>
 <ul>
-	<% if (locals.users) {%>
-		<% users.forEach(user => { %>
-			<li>
-				ID: <%= user.id %>, Name: <%= user.firstName %> <%= user.lastName %>
-				<a href="/<%= user.id %>/update">Update</a>
-			</li>
-		<% }); %>
-	<% } %>
+    <% if (locals.users) { %>
+        <% users.forEach(user => { %>
+            <li>
+                ID: <%= user.id %>,
+                Name: <%= user.firstName %> <%= user.lastName %>
+                <a href="/<%= user.id %>/update">Update</a>
+            </li>
+            <form
+                    action="/<%= user.id %>/delete"
+                    method="post"
+                    style="display: inline"
+            >
+                <button
+                        type="submit"
+                        onclick="return confirm('Are you sure?')
+"
+                >Delete
+                </button>
+            </form>
+        <% }); %>
+    <% } %>
 </ul>
 <a href="/create">Create a user</a>
 </body>
