Add email, age, and bio fields to user handling
Updated usersController.js to include email, age, and bio validation and handling in create and update functions. Modified updateUser.ejs and index.ejs to show and edit these new fields. Ensured form validation checks for email format and numeric age input.

--- a/full-stack-js/node-js/exercises/express-exercises/forms-and-data-handling/views/index.ejs
+++ b/full-stack-js/node-js/exercises/express-exercises/forms-and-data-handling/views/index.ejs
@@ -12,6 +12,13 @@
             <li>
                 ID: <%= user.id %>,
                 Name: <%= user.firstName %> <%= user.lastName %>
+                <br>
+                Email: <%= user.email%>
+                <br>
+                Age: <%= user.age %>
+                <br>
+                Bio: <%= user.bio %>
+                <br>
                 <a href="/<%= user.id %>/update">Update</a>
             </li>
             <form
